refactor(app): modernize to Java 25 idiom
Two call sites move from String.format to the instance form the codebase
otherwise uses everywhere: 1108 uses of .formatted against 13 of String.format
made these residue rather than a style preference.

The other eleven String.format calls stay. Each passes Locale.ROOT, and
.formatted has no locale-taking form — converting them would silently fall back
to the default locale, which is the outcome the explicit Locale.ROOT was
written to prevent.

Three further candidates were disproven rather than applied:

- All seventeen .get(0) calls are Gson JsonArray, which is Iterable and not a
  SequencedCollection, so getFirst() does not exist on them.
- All five new HashMap<>(...) calls pass a map, not a capacity, so they are
  copy constructors and HashMap.newHashMap does not apply.
- The one size() == 0 is on a ByteArrayOutputStream, which has no isEmpty().

The nineteen anonymous classes are all multi-method or abstract-class
implementations — OkHttp Callback and EventListener, Hibernate Synchronization,
Lucene Analyzer, OpenTelemetry SpanExporter among them — so none can become a
lambda. No colon-switch and no hand-rolled clamp remain anywhere in app/.

Verified: spotlessApply clean, compileJava and compileTestJava clean with
--rerun-tasks, play autotest reports "All tests passed" with no failure
sentinels.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>